noinst_LIBRARIES = libwindstille_editor.a

libwindstille_editor_a_CPPFLAGS = \
  @WINDSTILLE_CFLAGS@

libwindstille_editor_a_SOURCES = \
  editor_tilemap.hxx editor_tilemap.cxx \
  editor_tile.hxx editor_tile.cxx \
  tile_selector.hxx tile_selector.cxx \
  editor.hxx editor.cxx \
  editor_objmap.hxx   editor_objmap.cxx \
  editor_map.hxx editor_map.cxx \
  editor_map_component.hxx editor_map_component.cxx \
  tile_editor.hxx  tile_editor.cxx \
  tilemap_tool.hxx tilemap_tool.cxx \
  tilemap_paint_tool.hxx tilemap_paint_tool.cxx \
  tilemap_object_tool.hxx tilemap_object_tool.cxx \
  tilemap_select_tool.hxx tilemap_select_tool.cxx \
  tilemap_diamond_tool.hxx tilemap_diamond_tool.cxx \
  tile_brush.hxx   tile_brush.cxx \
  minimap.hxx   minimap.cxx \
  editor_names.hxx \
  object_brush.hxx object_brush.cxx \
  object_selector.hxx object_selector.cxx \
  tile_selection.hxx tile_selection.cxx \
  command.hxx \
  paint_command.hxx   paint_command.cxx \
  tool_manager.hxx tool_manager.cxx

# EOF #
